Mirroring from Micro.blog.

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ tagline: ""
 description: "Follow <a href=\"https://micro.blog/roelwillems\">@roelwillems on Micro.blog</a>."
 credits: "Follow <a href=\"https://micro.blog/roelwillems\">@roelwillems on Micro.blog</a>."
 baseurl: ""
-url: "http://microblog.roelwillems.com"
+url: "http://roelwillems.com"
 markdown: "kramdown"
 username: "roelwillems"
 permalink: "/:year/:month/:day/:title.html"
