--- a/_config.yml
+++ b/_config.yml
@@ -47,3 +47,5 @@ paginate_path: "/page/:num/"
 timezone: "Poland"
 site_id: "940"
 gems: ["jekyll-paginate"]
+itunes_category: "Society & Culture"
+itunes_subcategory: "Personal Journals"
