--- a/_config.yml
+++ b/_config.yml
@@ -45,3 +45,4 @@ site_id: "940"
 gems: ["jekyll-paginate"]
 itunes_category: "Society & Culture"
 itunes_subcategory: "Personal Journals"
+itunes_author: "Roel Willems"
