--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ tagline: ""
 description: "Follow <a href=\"https://micro.blog/roelwillems\">@roelwillems on Micro.blog</a>."
 credits: "Follow <a href=\"https://micro.blog/roelwillems\">@roelwillems on Micro.blog</a>."
 baseurl: ""
-url: "http://roelwillems.com"
+url: "https://roelwillems.com"
 markdown: "kramdown"
 username: "roelwillems"
 microblog_user: "roelwillems"
@@ -43,6 +43,21 @@ paginate_path: "/page/:num/"
 timezone: "Poland"
 site_id: "940"
 gems: ["jekyll-paginate"]
+itunes_description: "Welcome to my blog. 
+
+I’m Roel Willems,
+
+This is my own space on the internet and used as a poster wall of all I find interesting online. This could be about online business and internet culture but likely you will find random posts, quotes and link posts on technology, personal development, data science, online privacy and other topics which spark my interest.
+
+I work as lead analytics, data science and experimentation at Albert Heijn Online (part of Ahold Delhaize). And use Analytics, Data Science &amp; Experimentation to eliminate guesswork.
+
+For analytics, data science and Experimentation focused content please visit [Eliminateguess.work](eliminateguess.work).
+
+_A few additional words:_
+- all views and opinions expressed are my own;
+- Recommendations to services, apps or companies are without any affiliation."
 itunes_category: "Society & Culture"
 itunes_subcategory: "Personal Journals"
 itunes_author: "Roel Willems"
+itunes_email: ""
+podcast: false
