Mirroring from Micro.blog.

--- a/_config.yml
+++ b/_config.yml
@@ -43,21 +43,9 @@ paginate_path: "/page/:num/"
 timezone: "Poland"
 site_id: "940"
 gems: ["jekyll-paginate"]
-itunes_description: "Welcome to my blog. 
+itunes_description: "Adsum,
 
-I’m Roel Willems,
-
-This is my own space on the internet and used as a poster wall of all I find interesting online. This could be about online business and internet culture but likely you will find random posts, quotes and link posts on technology, personal development, data &amp; online privacy and other topics which spark my interest.
-
-I work at Albert Heijn Online (part of Ahold Delhaize) leading the analytics, data science and experimentation team. 
-
-For analytics, data science and Experimentation focused content please visit [Eliminateguess.work](eliminateguess.work).
-
-You can find my Photography at [maintainingfocus.com](maintaining focus.com).
-
-_A few additional words:_
-- all views and opinions expressed are my own;
-- Recommendations to services, apps or companies are without any affiliation."
+living in The Netherlands, working for Albert Heijn Online (part of Ahold Delhaize). Here you will find posts on technology, personal development, data &amp; online privacy and other topics which spark my interest."
 itunes_category: "Society & Culture"
 itunes_subcategory: "Personal Journals"
 itunes_author: "Roel Willems"
